도서 관리 부분 수정